# composable-me

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  HYDRA_SESSION_CHECKPOINT.md  README.md  RUNTIME_ERROR_FIX.md  dfw_platform_roles.csv  docker-compose.otel.yml  docker-compose.yml  docker-entrypoint.sh  dtcc_jd.txt  hydra_job07_nttdata_report.md  hydra_job_list.csv  job_e93843be_full_results.json  json-viewer.html  lessons-learned-augment.md  otel-collector-config.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  requirements-dev.txt  requirements.txt  run.sh  scratchpad_state_graph.md  serve_viewer.py  test_chutes.py  test_viewer_data.json  zapier.txt
.claude/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
.kiro/: linear-project.json.example
.serena/: project.yml
cli/: composable-crew-cli  go.mod  main.go
docs/: AGENTS.MD  AGENT_ROLES.MD  ARCHITECTURE.MD  JSON_VIEWER.md  STYLE_GUIDE.MD  USER_EXPERIENCE.md  WEB_SPEC.md  architecture.md  composableme-superprompt.md  content-and-prompts.md  refactor-audit.md
examples/: sample_jd.md  sample_resume.md
inputs/: job_01_bookmarked.md  job_03_coinbase.md  job_04_zapier_ai.md  job_05_zapier_asset.md  job_06_liveflow.md  job_07_nttdata.md  job_08_consultnet.md  job_10_aha.md  metronome_jd.txt  metronome_res.txt  resume_alex.txt  smarterdx.md  smarterdx_res.md
runtime/: __init__.py
scripts/: sync-kiro-to-linear.js
tests/: __init__.py  conftest.py  test_ats_optimizer.py  test_auditor.py  test_cli.py  test_differentiator.py  (+5 more)
(+273 files in other folders)
